<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnaddartist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addartist" />

    <Button
        android:id="@+id/btnaddphoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addphoto" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnviewphotolist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewphotolist" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@mipmap/ic_launcher_foreground" />
</LinearLayout>